Inicio de CSS - Estilizando Profile

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 </head>
 
 <body>
-    <div class="container-lateral">
-        <div class="profile">
-            <div class="avatar">
-                <img src="assets/profile.jpg" alt="Foto de Leonardo Vila">
+         <div class="profile">
+                <div class="avatar">
+                    <img src="assets/profile.jpg" alt="Foto de Leonardo Vila">
+                </div>
+                <h2> Leonardo Vila </h2>
+                <p>Full Stack Student</p>
+            
             </div>
-            <h2 class="nome"> Leonardo Vila </h2>
-            <p>Full Stack Student</p>
+        <div class="container-infos">
+             <div class="infos">
+                <p name="country">Brasil</p>
+                <p name="work">leovilaeu</p>
+                <p name="linkedin">leonardo-vila</p>
+                <p name="site">https://lvmotion.design</p>
+                <p name="email">leovilamail@gmail.com</p>
+            </div>
         </div>
-
-        <div class="infos">
-            <p name="country">Brasil</p>
-            <p name="work">leovilaeu</p>
-            <p name="linkedin">leonardo-vila</p>
-            <p name="site">https://lvmotion.design</p>
-            <p name="email">leovilamail@gmail.com</p>
-        </div>
-
         <div class="techs">
             <button disabled>JavaScript</button>
             <button disabled>HTML</button>
