--- a/index.html
+++ b/index.html
@@ -10,27 +10,45 @@
 </head>
 
 <body>
-         <div class="profile">
-                <div class="avatar">
-                    <img src="assets/profile.jpg" alt="Foto de Leonardo Vila">
-                </div>
-                <h2> Leonardo Vila </h2>
-                <p>Full Stack Student</p>
-            
+    <div class="container-lateral">
+        <div class="profile">
+            <div class="avatar">
+                <img src="assets/profile.jpg" alt="Foto de Leonardo Vila">
             </div>
-        <div class="container-infos">
-             <div class="infos">
+            <h2 class="nome"> Leonardo Vila </h2>
+            <p>Full Stack Student</p>
+        </div>
+
+        <div class="infos">
+            <div class="content">
+                <i class="fa-solid fa-earth-americas"></i>
                 <p name="country">Brasil</p>
-                <p name="work">leovilaeu</p>
+            </div>
+            <div class="content">
+                <i class="fa-brands fa-github"></i>
+                <p name="github">leovilaeu</p>
+            </div>
+            <div class="content">
+                <i class="fa-brands fa-linkedin-in"></i>
                 <p name="linkedin">leonardo-vila</p>
+            </div>
+            <div class="content">
+                <i class="fa-solid fa-globe"></i>
                 <p name="site">https://lvmotion.design</p>
+            </div>
+            <div class="content">
+                <i class="fa-solid fa-paper-plane"></i>
                 <p name="email">leovilamail@gmail.com</p>
             </div>
         </div>
+
         <div class="techs">
-            <button disabled>JavaScript</button>
-            <button disabled>HTML</button>
-            <button disabled>CSS</button>
+            <div class="content-tech">
+                <h2>Tecnologias</h2>
+                <button class="button-18" role="button">JavaScript</button>
+                <button class="button-18" role="button">HTML</button>
+                <button class="button-18" role="button">CSS</button>
+            </div>
         </div>
     </div>
 
@@ -48,6 +66,9 @@
     </div>
 
     </div>
+
+    <!--Scripts-->
+    <script src="https://kit.fontawesome.com/bf35dc5ed5.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
